@@ -28,15 +28,16 @@ import org.ajoberstar.grgit.Grgit
 buildscript {
     repositories {
         mavenLocal()
-        gradlePluginPortal()
+        mavenCentral()
         maven(url = "https://repo.runelite.net")
         maven(url = "https://raw.githubusercontent.com/jbx5/hosting/master")
         maven(url = "https://raw.githubusercontent.com/jbx5/devious-hosting/master")
     }
     dependencies {
         classpath("org.ajoberstar.grgit:grgit-core:4.1.0")
-        classpath("com.openosrs:script-assembler-plugin:1.0.1")
-        classpath("com.openosrs:injector-plugin:2.0.18")
+        classpath("com.openosrs:script-assembler-plugin:1.0.2")
+        classpath("com.openosrs:injector-plugin:2.0.20")
+        classpath("com.openosrs:interface-parser-plugin:1.0.0")
     }
 }
 
@@ -109,8 +110,9 @@ subprojects {
     project.extra["gitCommit"] = localGitCommit
     project.extra["rootPath"] = rootDir.toString().replace("\\", "/")
 
+    /*
     if (this.name != "runescape-client") {
-        apply<CheckstylePlugin>()
+        //apply<CheckstylePlugin>()
 
         configure<CheckstyleExtension> {
             maxWarnings = 0
@@ -119,6 +121,7 @@ subprojects {
             isIgnoreFailures = false
         }
     }
+    */
 
     configure<PublishingExtension> {
         repositories {
@@ -210,5 +213,6 @@ tasks {
         classpath = project(":runelite-client").sourceSets.main.get().runtimeClasspath
         enableAssertions = true
         mainClass.set("net.unethicalite.client.Unethicalite")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     }
 }
